Added docker-compose configuration for monolith and reservation-microservice together
