# monolith/views/customers.py
@@ -1,66 +1,0 @@
-import requests
-from flask import Blueprint, redirect, render_template, request, make_response
-from monolith.database import ( db, User, Reservation, Restaurant, Seat,
-                                Quarantine, Notification, Like, Review, Table)
-from monolith.auth import admin_required
-from flask_wtf import FlaskForm
-import wtforms as f
-from wtforms import Form
-from wtforms.validators import DataRequired, Length, Email, NumberRange
-from monolith.forms import UserForm, EditUserForm, SubReservationPeopleEmail
-from flask_login import (current_user, login_user, logout_user,
-                         login_required)
-import datetime
-from monolith.views.restaurants import restaurant_delete
-import json
-
-from flask import jsonify
-
-customers = Blueprint('customers', __name__)
-
-@customers.route('/reservation/customers/all', methods=['GET'])
-@login_required
-def get_reservation_list():
-    if (current_user.role == 'ha' or current_user.role == 'owner'):
-        return json.dumps({'message': 'not a customer'}),403
-        
-    reservation_records = db.session.query(Reservation).filter(
-        Reservation.booker_id == current_user.id,
-        Reservation.cancelled == False,
-        Reservation.date >= datetime.datetime.now()
-    ).all()
-
-    data_dict = []
-    for reservation in reservation_records:
-        resp,status_code = requests.get("/restaurants/"+reservation.restaurant_id+"/reservation")        
-        if(status_code==200):
-            temp_dict = dict(
-                restaurant_name=resp['name'],
-                date=reservation.date,
-                reservation_id=reservation.id
-            )
-            data_dict.append(temp_dict)
-    return json.dumps(data_dict),200
-
-    """   
-    if (current_user.role == 'ha' or current_user.role == 'owner'):
-        return make_response(render_template('error.html', message="You are not a customer! Redirecting to home page", redirect_url="/"), 403)
-
-    reservation_records = db.session.query(Reservation).filter(
-        Reservation.booker_id == current_user.id, 
-        Reservation.cancelled == False,
-        Reservation.date >= datetime.datetime.now()
-    ).all()
-
-    data_dict = []
-    for reservation in reservation_records:
-        rest_name = db.session.query(Restaurant).filter_by(id = reservation.restaurant_id).first().name
-        temp_dict = dict(
-            restaurant_name = rest_name,
-            date = reservation.date,
-            reservation_id = reservation.id
-        )
-        data_dict.append(temp_dict)
-
-    return render_template('user_reservations_list.html', reservations=data_dict, base_url="http://127.0.0.1:5000/users")
-    """
